bugfixes and resilience

--- a/BlogMaster.Client/Pages/Blogs.razor
+++ b/BlogMaster.Client/Pages/Blogs.razor
@@ -6,7 +6,7 @@
 @inject IBlogService blogService
 @inject NavigationManager navigationManager
 @inject PersistentComponentState applicationState
-@inject IWebAssemblyStateCacheService<List<BlogDto>> stateCacheService
+@inject IWebAssemblyStateCacheService stateCacheService
 @implements IDisposable
 
 <h1 class="mb-4">Blog Posts</h1>
