--- a/BlogMaster.Client/Pages/PostDetails.razor
+++ b/BlogMaster.Client/Pages/PostDetails.razor
@@ -5,7 +5,7 @@
 @inject IBlogService blogService
 @inject NavigationManager navigationManager
 @inject PersistentComponentState applicationState
-@inject IWebAssemblyStateCacheService<BlogDto> stateCacheService
+@inject IWebAssemblyStateCacheService stateCacheService
 @implements IDisposable
 
 @if (blogPost is null)
