--- a/BlogMaster.Client/_Imports.razor
+++ b/BlogMaster.Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using BlogMaster.Client
 @using BlogMaster.Shared.Components
 @using BlogMaster.Shared.Models
+@using BlogMaster.Client.Services.Interfaces
