--- a/BlogMaster/Components/Layout/NavMenu.razor
+++ b/BlogMaster/Components/Layout/NavMenu.razor
@@ -9,7 +9,12 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="blogs">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="bi bi-house icon-style" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="blogs" Match="NavLinkMatch.All">
                 <span class="bi bi-file-post icon-style" aria-hidden="true"></span> Blogs
             </NavLink>
         </div>
